fix display of SearchField with Modal CreateForm: add z-index

--- a/src/components/commons/Modal/Modal.module.scss
+++ b/src/components/commons/Modal/Modal.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   position: fixed;
+  z-index: 1;
   top: 0;
   left: 0;
   display: flex;
