--- a/src/components/commons/SearchField/SearchField.module.scss
+++ b/src/components/commons/SearchField/SearchField.module.scss
@@ -8,6 +8,7 @@
 
 .searchForm {
   position: relative;
+  z-index: 0;
 
   input {
     padding: 20px;
